--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sumit's Profile</title>
+  <title>Catch the Ball Game</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="profile-card">
-    <div class="profile-img">
-      <img src="https://via.placeholder.com/150" alt="Profile Picture">
-    </div>
-    <h1>Sumit Kumar</h1>
-    <p class="bio">Web Developer | Music Enthusiast | Dreamer</p>
-    <div class="social-links">
-      <a href="https://www.linkedin.com/" class="btn" target="_blank">LinkedIn</a>
-      <a href="https://github.com/your-username" class="btn" target="_blank">GitHub</a>
-      <a href="https://your-portfolio-link.com" class="btn" target="_blank">Portfolio</a>
+  <div class="game-container">
+    <div class="paddle" id="paddle"></div>
+    <div class="ball" id="ball"></div>
+    <div class="score-board">
+      Score: <span id="score">0</span>
     </div>
   </div>
   <script src="script.js"></script>
