--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <div class="game-container">
-    <div class="paddle" id="paddle"></div>
+    <div class="box" id="box"></div>
     <div class="ball" id="ball"></div>
     <div class="score-board">
-      Score: <span id="score">0</span>
+      Score: <span id="score">0</span><br>
+      High Score: <span id="highScore">0</span>
+    </div>
+    <div class="game-over" id="gameOver">
+      <p>Game Over!</p>
+      <button id="restart">Restart</button>
     </div>
   </div>
   <script src="script.js"></script>
