--- a/index.html
+++ b/index.html
@@ -7,18 +7,34 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="game-container">
+  <!-- Registration Popup -->
+  <div class="registration-popup" id="registrationPopup" style="display: none;">
+    <h2>Welcome to the Game!</h2>
+    <form id="registrationForm">
+      <label for="playerName">Enter Your Name:</label>
+      <input type="text" id="playerName" placeholder="Your Name" required />
+      <button type="submit">Register</button>
+    </form>
+  </div>
+
+  <!-- Start Game Popup -->
+  <div class="start-popup" id="startPopup" style="display: none;">
+    <h2>Welcome Back, <span id="playerGreeting"></span>!</h2>
+    <button id="startGameButton">Start Game</button>
+  </div>
+
+  <div class="game-container" id="gameContainer" style="display: none;">
     <div class="box" id="box"></div>
     <div class="ball" id="ball"></div>
     <div class="score-board">
-      Score: <span id="score">0</span><br>
-      High Score: <span id="highScore">0</span>
+      Player: <span id="playerNameDisplay"></span> | Score: <span id="score">0</span> | Target: <span id="highScore">0</span>
     </div>
-    <div class="game-over" id="gameOver">
-      <p>Game Over!</p>
+    <div class="game-over" id="gameOver" style="display: none;">
+      <h2>Game Over!</h2>
       <button id="restart">Restart</button>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
