--- a/index.html
+++ b/index.html
@@ -3,38 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catch the Ball Game</title>
+  <title>Simple Game</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Registration Popup -->
-  <div class="registration-popup" id="registrationPopup" style="display: none;">
-    <h2>Welcome to the Game!</h2>
-    <form id="registrationForm">
-      <label for="playerName">Enter Your Name:</label>
-      <input type="text" id="playerName" placeholder="Your Name" required />
-      <button type="submit">Register</button>
-    </form>
+  <div id="registrationPopup" class="popup">
+    <h2>Enter Your Name</h2>
+    <input type="text" id="playerName" placeholder="Name">
+    <button id="registerButton">Register</button>
   </div>
 
-  <!-- Start Game Popup -->
-  <div class="start-popup" id="startPopup" style="display: none;">
-    <h2>Welcome Back, <span id="playerGreeting"></span>!</h2>
-    <button id="startGameButton">Start Game</button>
+  <!-- Game Area -->
+  <div id="gameContainer" style="display: none;">
+    <div id="box"></div>
+    <div id="ball"></div>
+    <div id="scoreBoard">Score: <span id="score">0</span></div>
   </div>
 
-  <div class="game-container" id="gameContainer" style="display: none;">
-    <div class="box" id="box"></div>
-    <div class="ball" id="ball"></div>
-    <div class="score-board">
-      Player: <span id="playerNameDisplay"></span> | Score: <span id="score">0</span> | Target: <span id="highScore">0</span>
-    </div>
-    <div class="game-over" id="gameOver" style="display: none;">
-      <h2>Game Over!</h2>
-      <button id="restart">Restart</button>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
