--- a/index.html
+++ b/index.html
@@ -3,39 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Player Registration Game</title>
+  <title>Bucket Ball Game</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Registration Popup -->
   <div id="registrationPopup" class="popup">
-    <h2>Enter Your Name</h2>
-    <input type="text" id="playerName" placeholder="Enter your name">
-    <button id="registerButton">Register</button>
+    <div class="popup-content">
+      <h2>Enter Your Name</h2>
+      <input type="text" id="playerName" placeholder="Enter name">
+      <button id="registerButton">Register</button>
+    </div>
   </div>
 
-  <!-- Game Start Popup -->
-  <div id="startPopup" class="popup" style="display: none;">
-    <h2>Welcome, <span id="playerGreeting"></span>!</h2>
-    <button id="startGameButton">Start Game</button>
-  </div>
-
-  <!-- Game Area -->
-  <div id="gameContainer" style="display: none;">
-    <div id="bucket"></div>
-    <div id="ball"></div>
-    <div id="scoreBoard">Score: <span id="score">0</span></div>
-    <div id="targetScore">Target: 0</div>
+  <!-- Start Game Popup -->
+  <div id="startPopup" class="popup">
+    <div class="popup-content">
+      <h2>Hello, <span id="playerGreeting"></span></h2>
+      <button id="startGameButton">Start Game</button>
+    </div>
   </div>
 
   <!-- Game Over Popup -->
-  <div id="gameOverPopup" class="popup" style="display: none;">
-    <h2>Game Over</h2>
-    <p>Your Score: <span id="finalScore"></span></p>
-    <p id="targetScoreMessage"></p>
-    <button id="restartButton">Restart</button>
+  <div id="gameOverPopup" class="popup">
+    <div class="popup-content">
+      <h2>Game Over</h2>
+      <p>Your final score: <span id="finalScore"></span></p>
+      <p id="targetScoreMessage"></p>
+      <button id="restartButton">Restart</button>
+    </div>
   </div>
 
-  <script src="script.js" defer></script>
+  <!-- Game Container -->
+  <div id="gameContainer">
+    <div id="bucket"></div>
+    <div id="ball"></div>
+    <div id="score">Score: 0</div>
+    <div id="targetScore"></div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
